Update Capital P index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="./packages/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./Packages/css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="./packages/css/styles.css" />
+    <link rel="stylesheet" href="./Packages/css/styles.css" />
 
     <title>Sangamesh Bagewadi</title>
   </head>
@@ -125,7 +125,7 @@
                   <image
                     class="home__blob-img"
                     x=""
-                    xlink:href="packages/images/sang.jpg"
+                    xlink:href="Packages/images/sang.jpg"
                   />
                 </g>
               </svg>
@@ -144,7 +144,7 @@
               <a href="contact.html" class="button button--flex home__button">
                 Contact Me<i class="uil uil-message button__icon"></i>
               </a>
-              <a download="" href="packages/pdf/" class="button button--flex">
+              <a download="" href="Packages/pdf/" class="button button--flex">
                 Download CV<i class="uil uil-download-alt button__icon"></i>
               </a>
             </div>
@@ -620,7 +620,7 @@
             </div>
           </div>
           <div>
-            <img id="anime-photo" src="packages/images/avatars.png" alt="Just a Photo"/>
+            <img id="anime-photo" src="Packages/images/avatars.png" alt="Just a Photo"/>
           </div>
 
           <!--==================== SERVICES 3 ====================-->
@@ -668,7 +668,7 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="./packages/images/b1.jpeg"
+                src="./Packages/images/b1.jpeg"
                 alt=""
                 class="portfolio__img"
               />
@@ -693,7 +693,7 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="./packages/images/bm1.jpeg"
+                src="./Packages/images/bm1.jpeg"
                 alt=""
                 class="portfolio__img"
               />
@@ -718,7 +718,7 @@
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="./packages/images/vtu1.jpeg"
+                src="./Packages/images/vtu1.jpeg"
                 alt=""
                 class="portfolio__img"
               />
@@ -745,7 +745,7 @@
 
             <div class="portfolio__content grid swiper-slide">
                 <img
-                    src="./packages/images/vm1.jpeg"
+                    src="./Packages/images/vm1.jpeg"
                     alt=""
                     class="portfolio__img"/>
 
@@ -846,9 +846,9 @@
     </a>
 
     <!--==================== SWIPER JS ====================-->
-    <script src="./packages/js/swiper-bundle.min.js"></script>
+    <script src="./Packages/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
-    <script src="./packages/js/main.js"></script>
+    <script src="./Packages/js/main.js"></script>
   </body>
 </html>
