--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
     />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="./packages/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./Packages/css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="./packages/css/styles.css" />
+    <link rel="stylesheet" href="./Packages/css/styles.css" />
   </head>
   <body>
     <section class="contact section" id="contact">
@@ -100,9 +100,9 @@
     </a>
 
     <!--==================== SWIPER JS ====================-->
-    <script src="./packages/js/swiper-bundle.min.js"></script>
+    <script src="./Packages/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
-    <script src="./packages/js/main.js"></script>
+    <script src="./Packages/js/main.js"></script>
   </body>
 </html>
