--- a/index.html
+++ b/index.html
@@ -250,10 +250,38 @@
                 </div> -->
               </div>
             </div>
+
+<!-- ===========================================skills sangamesh ====================-->
+<div class="skills__content skills__close">
+  <div class="skills__header">
+    <i class="uil uil-money-bill skills__icon"></i>
+    <div>
+      <h1 class="skills__title">IT Constructs</h1>
+    </div>
+
+    <i class="uil uil-angle-down skills__arrow"></i>
+  </div>
+  <div class="skills__list grid">
+    <div class="skills__data">
+      <div class="skills__titles">
+        <h3 class="skills__name">DBMS , DS & Algorithms , OOP Concepts , OS</h3>
+        <span class="skills__number"></span>
+      </div>
+      <div class="skills__bar">
+        <span class="skills__percentage skills__bank"></span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
             <!--==================== SKILLS 2 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
-                <i class="uil uil-money-bill skills__icon"></i>
+                <i class=" uil-palette skills__icon"></i>
                 <div>
                   <h1 class="skills__title">Front-End technologies</h1>
                 </div>
@@ -307,7 +335,7 @@
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
                 <div>
-                  <h1 class="skills__title">Tech  Tools</h1>
+                  <h1 class="skills__title">Technologies</h1>
                 </div>
 
                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -820,7 +848,7 @@
               <a href="#portfolio" class="footer__link">Portfolio</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contact</a>
+              <a href="contact.html" class="footer__link">Contact</a>
             </li>
           </ul>
 
@@ -831,7 +859,7 @@
             <a href="" class="footer__social">
               <i class="uil uil-instagram"></i>
             </a>
-            <a href="" class="footer__social">
+            <a href="https://x.com/sangameshb40" target="_blank" class="footer__social">
               <i class="uil uil-twitter-alt"></i>
             </a>
           </div>
