--- a/index.html
+++ b/index.html
@@ -705,12 +705,18 @@
                     handling all functionalities of a bank management system.
                 </p>
                 <a
+                  href="https://sangameshbagewadi.github.io/Online-Bank-Management-System/" target="_blank"
+                  class="button button--flex button--small portfolio__button">
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+                <a
                   href="https://github.com/sangameshbagewadi/Online-Bank-Management-System" target="_blank"
-                  class="button button--flex button--small portfolio__button"
-                >
+                  class="button button--flex button--small portfolio__button">
                   GitHub
                   <i class="uil uil-arrow-right button__icon"></i>
                 </a>
+                
               </div>
             </div>
 
